<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home"/>

    <item
        android:id="@+id/nav_network"
        android:icon="@drawable/ic_nav_network"
        android:title="@string/nav_my_network"/>
    <item
        android:id="@+id/nav_post"
        android:icon="@drawable/ic_nav_post"
        android:title="@string/nav_post"/>
    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/ic_nav_notifications"
        android:title="@string/nav_notifications"/>
    <item
        android:id="@+id/nav_jobs"
        android:icon="@drawable/ic_nav_jobs"
        android:title="@string/nav_jobs"/>
</menu>