<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.JoinLinkedInActivity">

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_margin="@dimen/_16sdp"
        android:src="@drawable/login_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/main_color"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/btn_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/join"
        android:textColor="@color/black"
        android:textSize="@dimen/_26ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signIn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/gray"
            tools:layout_editor_absoluteX="172dp"
            tools:layout_editor_absoluteY="436dp" />

        <TextView
            android:id="@+id/signIn_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2ssp"
            android:text="@string/sign_in"
            android:textColor="@color/main_color"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="172dp"
            tools:layout_editor_absoluteY="436dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/data_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@id/linearLayout1">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="@color/gray"
            android:importantForAutofill="no" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:drawablePadding="@dimen/_6sdp"
            android:drawableEnd="@drawable/ic_show_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="@color/gray"
            android:importantForAutofill="no" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data_field">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/_10sdp"
            android:elevation="0dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="40dp"
            app:cardElevation="0dp">


            <RelativeLayout
                android:id="@+id/continue_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/main_color">

                <TextView
                    android:id="@+id/button_continue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/Continue"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold" />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="56dp"
           android:gravity="center"
           android:orientation="horizontal"
           android:padding="@dimen/_16sdp">

           <View
               android:id="@+id/view1"
               android:layout_width="0dp"
               android:layout_height="@dimen/_2sdp"
               android:layout_weight="1"
               android:background="@color/gray" />

           <TextView
               android:id="@+id/tv"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="@dimen/_6sdp"
               android:layout_marginEnd="@dimen/_6sdp"
               android:text="@string/or"
               android:textColor="@color/black"
               android:textSize="@dimen/_24ssp" />

           <View
               android:id="@+id/view2"
               android:layout_width="0dp"
               android:layout_height="@dimen/_2sdp"
               android:layout_weight="1"
               android:background="@color/gray" />
       </LinearLayout>

       <RelativeLayout
           android:id="@+id/google_signUp_btn"
           android:layout_width="match_parent"
           android:layout_height="45dp"
           android:layout_marginStart="@dimen/_10sdp"
           android:layout_marginEnd="@dimen/_10sdp"
           android:background="@drawable/button_outline">

           <ImageView
               android:id="@+id/google_img"
               android:layout_width="21dp"
               android:layout_height="21dp"
               android:layout_centerVertical="true"
               android:layout_toStartOf="@id/btn_google_signin"
               android:src="@drawable/google" />


           <TextView
               android:id="@+id/btn_google_signin"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_centerInParent="true"
               android:gravity="center"
               android:paddingStart="10dp"
               android:paddingEnd="10dp"
               android:text="@string/continue_with_Google"
               android:textColor="@color/black"
               android:textSize="@dimen/_16ssp" />
       </RelativeLayout>

       <RelativeLayout
           android:id="@+id/facebook_signUp_btn"
           android:layout_width="match_parent"
           android:layout_height="45dp"
           android:layout_marginStart="@dimen/_10sdp"
           android:layout_marginEnd="@dimen/_10sdp"
           android:layout_marginTop="@dimen/_10sdp"
           android:background="@drawable/button_outline">

           <ImageView
               android:id="@+id/facebook_img"
               android:layout_width="21dp"
               android:layout_height="21dp"
               android:layout_centerVertical="true"
               android:layout_toStartOf="@id/btn_facebook_signin"
               android:src="@drawable/facebook" />


           <TextView
               android:id="@+id/btn_facebook_signin"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_centerInParent="true"
               android:gravity="center"
               android:paddingStart="10dp"
               android:paddingEnd="10dp"
               android:text="@string/continue_with_Facebook"
               android:textColor="@color/black"
               android:textSize="@dimen/_16ssp" />
       </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>